swagger fixes
