# docs/swagger.json
@@ -531,40 +531,6 @@
                 }
             }
         },
-        "/api/initiate-ft-transfer": {
-            "post": {
-                "description": "This API endpoint will initiate transfer of FTs.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "FT"
-                ],
-                "summary": "Initiate an FT transfer",
-                "parameters": [
-                    {
-                        "description": "Transfer FT",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/server.TransferFTReqSwaggoInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.BasicResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/api/initiate-self-transfer": {
             "post": {
                 "description": "This API will initiate self RBT transfer for a specific DID",
@@ -1028,7 +994,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "fts"
+                    "FT"
                 ],
                 "summary": "List FTs",
                 "responses": {
@@ -1177,7 +1143,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tx"
+                    "Transactions"
                 ],
                 "summary": "List transactions",
                 "operationId": "getAllTx",
@@ -1199,7 +1165,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tx"
+                    "Transactions"
                 ],
                 "summary": "Initiates a transaction",
                 "operationId": "txInit",
@@ -1234,7 +1200,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tx"
+                    "Transactions"
                 ],
                 "summary": "Get Transactions by DID",
                 "operationId": "getTxnsByDID",
@@ -1250,7 +1216,8 @@
                         "type": "string",
                         "description": "Token Type (rbt, nft, ft, smartContract)",
                         "name": "token_type",
-                        "in": "path"
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1273,7 +1240,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tx"
+                    "Transactions"
                 ],
                 "summary": "Get Transactions by ID",
                 "operationId": "txQuery",
@@ -1725,35 +1692,6 @@
                     "type": "integer"
                 },
                 "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.TransferFTReqSwaggoInput": {
-            "type": "object",
-            "properties": {
-                "comment": {
-                    "type": "string"
-                },
-                "creatorDID": {
-                    "type": "string"
-                },
-                "ft_count": {
-                    "type": "integer"
-                },
-                "ft_name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "quorum_type": {
-                    "type": "integer"
-                },
-                "receiver": {
-                    "type": "string"
-                },
-                "sender": {
                     "type": "string"
                 }
             }
